--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://grupo4:NrhxkqbcdQ6IKgsIA8RCwv0EkAwDUNto@dpg-d06hvb2li9vc73edbndg-a.oregon-postgres.render.com/gardenstoredb_f7z7?ssl=true
+DATABASE_URL=postgresql://ezequiel:bpjdwlg7Z8Sn9rdN3u7kBuMiHwgASDhG@dpg-d0efmf3e5dus73fhj4a0-a.oregon-postgres.render.com/el_taller_del_barrio_bd?ssl=true
 FRONTEND_URL=http://localhost:5173
